<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/review_bg">

    <TextView
        android:id="@+id/text_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marimea2"
        android:fontFamily="@font/sfui_text_regular"
        android:text="@string/give_us_a_5_star_rating"
        android:textColor="@color/dark"
        android:textSize="@dimen/text2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/starBG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_one" />

    <ImageView
        android:id="@+id/starButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/marimea2"

        app:layout_constraintBottom_toBottomOf="@+id/starBG"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/starBG" />

    <ImageView
        android:id="@+id/feedbackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starBG" />

    <ImageView
        android:id="@+id/cancelFeedbackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedbackButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfui_text_medium"
        android:paddingBottom="3dp"
        android:text="@string/here_are_your_5_stars"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text5"
        app:layout_constraintBottom_toBottomOf="@+id/starButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/starButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfui_text_regular"
        android:paddingBottom="13dp"
        android:text="@string/give_feedback_to_improve_bodytune"
        android:textColor="@color/dark"
        android:textSize="@dimen/text4"
        app:layout_constraintBottom_toBottomOf="@+id/feedbackButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/feedbackButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfui_text_regular"
        android:paddingBottom="13dp"
        android:text="@string/no_thanks"
        android:textColor="@color/dark"
        android:textSize="@dimen/text4"
        app:layout_constraintBottom_toBottomOf="@+id/cancelFeedbackButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cancelFeedbackButton" />
</androidx.constraintlayout.widget.ConstraintLayout>
